# two-party-hash

./: .travis.yml  Cargo.toml  README.md
src/: cli.rs  main.rs  sha2.rs  utils.rs
