[package]
name = "two-party-hash"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["Elichai Turkel <elichai.turkel@gmail.com>"]
repository = "https://github.com/elichai/two-party-hash"
readme = "README.md"
edition = "2018"
description = "Generate a hash between two different parties without revealing preimages"
categories = ["cryptography", "command-line-utilities"]
keywords = ["crypto", "cli"]

[dependencies]
structopt = "0.2.18"
rustc-hex = "2.0.1"
rand_os = "0.2.0"

[dev-dependencies]
rand = "0.7.0"

[badges]
travis-ci = { repository = "elichai/two-party-hash" }
